--- a/GD.FabricRedux/GD.FabricRedux.UX/package.json
+++ b/GD.FabricRedux/GD.FabricRedux.UX/package.json
@@ -2,7 +2,7 @@
   "name": "gd.fabric-redux.ux",
   "version": "1.0.0",
   "description": "GD.FabricRedux.UX",
-  "main": "src/index.js",
+  "main": "src/index.tsx",
   "author": {
     "name": "Gunjan Datta"
   },
@@ -11,21 +11,24 @@
     "test": "webpack-dev-server --hot --inline --colors --progress"
   },
   "dependencies": {
-    "gd-sprest": "^1.1.1",
-    "office-ui-fabric-react": "^0.82.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
+    "gd-sprest": "^1.2.8",
+    "office-ui-fabric-react": "^2.5.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "file-loader": "^0.9.0",
+    "@types/react": "^15.0.16",
+    "@types/react-dom": "^0.14.23",
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "es6-promise": "^4.1.0",
+    "object-assign": "^4.1.1",
     "react-hot-loader": "^1.3.1",
-    "webpack": "^1.14.0"
+    "ts-loader": "^2.0.2",
+    "webpack": "^2.2.1"
   }
 }
