--- a/GD.FabricRedux/GD.FabricRedux.UX/package.json
+++ b/GD.FabricRedux/GD.FabricRedux.UX/package.json
@@ -11,24 +11,25 @@
     "test": "webpack-dev-server --hot --inline --colors --progress"
   },
   "dependencies": {
-    "gd-sprest": "^1.2.8",
-    "office-ui-fabric-react": "^2.5.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "redux": "^3.6.0",
+    "gd-sprest": "^2.5.9",
+    "office-ui-fabric-react": "^5.38.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@types/react": "^15.0.16",
-    "@types/react-dom": "^0.14.23",
-    "babel-core": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "es6-promise": "^4.1.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "es6-promise": "^4.2.2",
     "object-assign": "^4.1.1",
-    "react-hot-loader": "^1.3.1",
-    "ts-loader": "^2.0.2",
-    "webpack": "^2.2.1"
+    "react-hot-loader": "^3.1.3",
+    "ts-loader": "^3.2.0",
+    "webpack": "^3.10.0"
   }
 }
